[gd_scene load_steps=25 format=3 uid="uid://gt2b60lkyiwa"]

[ext_resource type="Script" path="res://game.gd" id="1_4d46r"]
[ext_resource type="Texture2D" uid="uid://qy1yas8vnt8m" path="res://assets/environment/ground.png" id="2_wcpba"]
[ext_resource type="Script" path="res://Player.gd" id="3_3coxh"]
[ext_resource type="Texture2D" uid="uid://do2m41hhuf0c" path="res://assets/player/player_05.png" id="3_e3q8m"]
[ext_resource type="Texture2D" uid="uid://kcsdxjsj842a" path="res://assets/environment/wall.png" id="3_yjl1u"]
[ext_resource type="Texture2D" uid="uid://bwju7a8ph4f62" path="res://assets/player/player_06.png" id="4_cn56k"]
[ext_resource type="Texture2D" uid="uid://dxdcsbqax8a5q" path="res://assets/environment/ground_x.png" id="4_mt42b"]
[ext_resource type="Texture2D" uid="uid://be6fjt3bv2lwf" path="res://assets/player/player_07.png" id="5_d8kxl"]
[ext_resource type="Texture2D" uid="uid://b0gwqoirg0hhw" path="res://assets/player/player_21.png" id="9_yv2o6"]
[ext_resource type="Texture2D" uid="uid://cwbkvs254o435" path="res://assets/player/player_20.png" id="10_euk3p"]
[ext_resource type="Texture2D" uid="uid://b8f35oya7ejgw" path="res://assets/player/player_22.png" id="11_h0ncl"]
[ext_resource type="Texture2D" uid="uid://dh4o38pmp53mh" path="res://assets/player/player_08.png" id="12_n17iy"]
[ext_resource type="Texture2D" uid="uid://muucc4rtn3l0" path="res://assets/player/player_18.png" id="12_vo8rd"]
[ext_resource type="Texture2D" uid="uid://debn62o6b3g7c" path="res://assets/player/player_09.png" id="13_dxdap"]
[ext_resource type="Texture2D" uid="uid://4fr0wwwbv8lj" path="res://assets/player/player_19.png" id="14_3s8xv"]
[ext_resource type="Texture2D" uid="uid://cnqq3tj5dctst" path="res://assets/player/player_17.png" id="14_apxxt"]
[ext_resource type="Texture2D" uid="uid://03dsnobj3nll" path="res://assets/player/player_10.png" id="14_d654e"]
[ext_resource type="Script" path="res://Crate.gd" id="20_lbatr"]
[ext_resource type="Texture2D" uid="uid://v7f13l84foow" path="res://assets/environment/crate.png" id="21_2i6sk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqqgm"]
texture = ExtResource("3_yjl1u")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_24hsu"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_aqqgm")

[sub_resource type="SpriteFrames" id="SpriteFrames_tff2f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cn56k")
}, {
"duration": 1.0,
"texture": ExtResource("3_e3q8m")
}, {
"duration": 1.0,
"texture": ExtResource("5_d8kxl")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_e3q8m")
}],
"loop": true,
"name": &"down_calm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_yv2o6")
}, {
"duration": 1.0,
"texture": ExtResource("10_euk3p")
}, {
"duration": 1.0,
"texture": ExtResource("11_h0ncl")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_euk3p")
}],
"loop": true,
"name": &"left_calm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_vo8rd")
}, {
"duration": 1.0,
"texture": ExtResource("14_apxxt")
}, {
"duration": 1.0,
"texture": ExtResource("14_3s8xv")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_apxxt")
}],
"loop": true,
"name": &"right_calm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_dxdap")
}, {
"duration": 1.0,
"texture": ExtResource("12_n17iy")
}, {
"duration": 1.0,
"texture": ExtResource("14_d654e")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_n17iy")
}],
"loop": true,
"name": &"up_calm",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8d84r"]
size = Vector2(56, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcd78"]
size = Vector2(62, 62)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4d46r")

[node name="ground" type="TextureRect" parent="."]
offset_top = 1.0
offset_right = 1156.0
offset_bottom = 650.0
texture = ExtResource("2_wcpba")
stretch_mode = 1

[node name="walls" type="TileMap" parent="."]
tile_set = SubResource("TileSet_24hsu")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 1, 131072, 1, 2, 196608, 1, 3, 1, 65537, 0, 65537, 65537, 1, 131073, 65537, 2, 196609, 65537, 3, 2, 131073, 0, 65538, 131073, 1, 131074, 131073, 2, 196610, 131073, 3, 3, 196609, 0, 65539, 196609, 1, 131075, 196609, 2, 196611, 196609, 3, 4, 1, 0, 65540, 1, 1, 131076, 1, 2, 196612, 1, 3, 5, 65537, 0, 65541, 65537, 1, 131077, 65537, 2, 196613, 65537, 3, 6, 131073, 0, 65542, 131073, 1, 131078, 131073, 2, 196614, 131073, 3, 7, 196609, 0, 65543, 196609, 1, 131079, 196609, 2, 196615, 196609, 3, 8, 1, 0, 65544, 1, 1, 131080, 1, 2, 196616, 1, 3, 9, 65537, 0, 65545, 65537, 1, 131081, 65537, 2, 196617, 65537, 3, 10, 131073, 0, 65546, 131073, 1, 131082, 131073, 2, 196618, 131073, 3, 11, 196609, 0, 65547, 196609, 1, 131083, 196609, 2, 196619, 196609, 3, 12, 1, 0, 65548, 1, 1, 131084, 1, 2, 196620, 1, 3, 13, 65537, 0, 65549, 65537, 1, 131085, 65537, 2, 196621, 65537, 3, 14, 131073, 0, 65550, 131073, 1, 131086, 131073, 2, 196622, 131073, 3, 15, 196609, 0, 65551, 196609, 1, 131087, 196609, 2, 196623, 196609, 3, 16, 1, 0, 65552, 1, 1, 131088, 1, 2, 196624, 1, 3, 17, 65537, 0, 65553, 65537, 1, 131089, 65537, 2, 196625, 65537, 3, 18, 131073, 0, 65554, 131073, 1, 131090, 131073, 2, 196626, 131073, 3, 19, 196609, 0, 65555, 196609, 1, 131091, 196609, 2, 196627, 196609, 3, 20, 1, 0, 65556, 1, 1, 131092, 1, 2, 196628, 1, 3, 21, 65537, 0, 65557, 65537, 1, 131093, 65537, 2, 196629, 65537, 3, 22, 131073, 0, 65558, 131073, 1, 131094, 131073, 2, 196630, 131073, 3, 23, 196609, 0, 65559, 196609, 1, 131095, 196609, 2, 196631, 196609, 3, 24, 1, 0, 65560, 1, 1, 131096, 1, 2, 196632, 1, 3, 25, 65537, 0, 65561, 65537, 1, 131097, 65537, 2, 196633, 65537, 3, 26, 131073, 0, 65562, 131073, 1, 131098, 131073, 2, 196634, 131073, 3, 27, 196609, 0, 65563, 196609, 1, 131099, 196609, 2, 196635, 196609, 3, 28, 1, 0, 65564, 1, 1, 131100, 1, 2, 196636, 1, 3, 29, 65537, 0, 65565, 65537, 1, 131101, 65537, 2, 196637, 65537, 3, 30, 131073, 0, 65566, 131073, 1, 131102, 131073, 2, 196638, 131073, 3, 31, 196609, 0, 65567, 196609, 1, 131103, 196609, 2, 196639, 196609, 3, 32, 1, 0, 65568, 1, 1, 131104, 1, 2, 196640, 1, 3, 33, 65537, 0, 65569, 65537, 1, 131105, 65537, 2, 196641, 65537, 3, 34, 131073, 0, 65570, 131073, 1, 131106, 131073, 2, 196642, 131073, 3, 35, 196609, 0, 65571, 196609, 1, 131107, 196609, 2, 196643, 196609, 3, 36, 1, 0, 65572, 1, 1, 131108, 1, 2, 196644, 1, 3, 37, 65537, 0, 65573, 65537, 1, 131109, 65537, 2, 196645, 65537, 3, 38, 131073, 0, 65574, 131073, 1, 131110, 131073, 2, 196646, 131073, 3, 39, 196609, 0, 65575, 196609, 1, 131111, 196609, 2, 196647, 196609, 3, 40, 1, 0, 65576, 1, 1, 131112, 1, 2, 196648, 1, 3, 41, 65537, 0, 65577, 65537, 1, 131113, 65537, 2, 196649, 65537, 3, 42, 131073, 0, 65578, 131073, 1, 131114, 131073, 2, 196650, 131073, 3, 43, 196609, 0, 65579, 196609, 1, 131115, 196609, 2, 196651, 196609, 3, 44, 1, 0, 65580, 1, 1, 131116, 1, 2, 196652, 1, 3, 45, 65537, 0, 65581, 65537, 1, 131117, 65537, 2, 196653, 65537, 3, 46, 131073, 0, 65582, 131073, 1, 131118, 131073, 2, 196654, 131073, 3, 47, 196609, 0, 65583, 196609, 1, 131119, 196609, 2, 196655, 196609, 3, 48, 1, 0, 65584, 1, 1, 131120, 1, 2, 196656, 1, 3, 49, 65537, 0, 65585, 65537, 1, 131121, 65537, 2, 196657, 65537, 3, 50, 131073, 0, 65586, 131073, 1, 131122, 131073, 2, 196658, 131073, 3, 51, 196609, 0, 65587, 196609, 1, 131123, 196609, 2, 196659, 196609, 3, 52, 1, 0, 65588, 1, 1, 131124, 1, 2, 196660, 1, 3, 53, 65537, 0, 65589, 65537, 1, 131125, 65537, 2, 196661, 65537, 3, 54, 131073, 0, 65590, 131073, 1, 131126, 131073, 2, 196662, 131073, 3, 55, 196609, 0, 65591, 196609, 1, 131127, 196609, 2, 196663, 196609, 3, 56, 1, 0, 65592, 1, 1, 131128, 1, 2, 196664, 1, 3, 57, 65537, 0, 65593, 65537, 1, 131129, 65537, 2, 196665, 65537, 3, 58, 131073, 0, 65594, 131073, 1, 131130, 131073, 2, 196666, 131073, 3, 59, 196609, 0, 65595, 196609, 1, 131131, 196609, 2, 196667, 196609, 3, 60, 1, 0, 65596, 1, 1, 131132, 1, 2, 196668, 1, 3, 61, 65537, 0, 65597, 65537, 1, 131133, 65537, 2, 196669, 65537, 3, 62, 131073, 0, 65598, 131073, 1, 131134, 131073, 2, 196670, 131073, 3, 63, 196609, 0, 65599, 196609, 1, 131135, 196609, 2, 196671, 196609, 3, 64, 1, 0, 65600, 1, 1, 131136, 1, 2, 196672, 1, 3, 65, 65537, 0, 65601, 65537, 1, 131137, 65537, 2, 196673, 65537, 3, 66, 131073, 0, 65602, 131073, 1, 131138, 131073, 2, 196674, 131073, 3, 67, 196609, 0, 65603, 196609, 1, 131139, 196609, 2, 196675, 196609, 3, 68, 1, 0, 65604, 1, 1, 131140, 1, 2, 196676, 1, 3, 69, 65537, 0, 65605, 65537, 1, 131141, 65537, 2, 196677, 65537, 3, 70, 131073, 0, 65606, 131073, 1, 131142, 131073, 2, 196678, 131073, 3, 71, 196609, 0, 65607, 196609, 1, 131143, 196609, 2, 196679, 196609, 3, 262212, 1, 0, 327748, 1, 1, 393284, 1, 2, 458820, 1, 3, 262213, 65537, 0, 327749, 65537, 1, 393285, 65537, 2, 458821, 65537, 3, 262214, 131073, 0, 327750, 131073, 1, 393286, 131073, 2, 458822, 131073, 3, 262215, 196609, 0, 327751, 196609, 1, 393287, 196609, 2, 458823, 196609, 3, 524356, 1, 0, 589892, 1, 1, 655428, 1, 2, 720964, 1, 3, 524357, 65537, 0, 589893, 65537, 1, 655429, 65537, 2, 720965, 65537, 3, 524358, 131073, 0, 589894, 131073, 1, 655430, 131073, 2, 720966, 131073, 3, 524359, 196609, 0, 589895, 196609, 1, 655431, 196609, 2, 720967, 196609, 3, 786500, 1, 0, 852036, 1, 1, 917572, 1, 2, 983108, 1, 3, 786501, 65537, 0, 852037, 65537, 1, 917573, 65537, 2, 983109, 65537, 3, 786502, 131073, 0, 852038, 131073, 1, 917574, 131073, 2, 983110, 131073, 3, 786503, 196609, 0, 852039, 196609, 1, 917575, 196609, 2, 983111, 196609, 3, 1048644, 1, 0, 1114180, 1, 1, 1179716, 1, 2, 1245252, 1, 3, 1048645, 65537, 0, 1114181, 65537, 1, 1179717, 65537, 2, 1245253, 65537, 3, 1048646, 131073, 0, 1114182, 131073, 1, 1179718, 131073, 2, 1245254, 131073, 3, 1048647, 196609, 0, 1114183, 196609, 1, 1179719, 196609, 2, 1245255, 196609, 3, 1310788, 1, 0, 1376324, 1, 1, 1441860, 1, 2, 1507396, 1, 3, 1310789, 65537, 0, 1376325, 65537, 1, 1441861, 65537, 2, 1507397, 65537, 3, 1310790, 131073, 0, 1376326, 131073, 1, 1441862, 131073, 2, 1507398, 131073, 3, 1310791, 196609, 0, 1376327, 196609, 1, 1441863, 196609, 2, 1507399, 196609, 3, 1572932, 1, 0, 1638468, 1, 1, 1704004, 1, 2, 1769540, 1, 3, 1572933, 65537, 0, 1638469, 65537, 1, 1704005, 65537, 2, 1769541, 65537, 3, 1572934, 131073, 0, 1638470, 131073, 1, 1704006, 131073, 2, 1769542, 131073, 3, 1572935, 196609, 0, 1638471, 196609, 1, 1704007, 196609, 2, 1769543, 196609, 3, 1835076, 1, 0, 1900612, 1, 1, 1966148, 1, 2, 2031684, 1, 3, 1835077, 65537, 0, 1900613, 65537, 1, 1966149, 65537, 2, 2031685, 65537, 3, 1835078, 131073, 0, 1900614, 131073, 1, 1966150, 131073, 2, 2031686, 131073, 3, 1835079, 196609, 0, 1900615, 196609, 1, 1966151, 196609, 2, 2031687, 196609, 3, 2097220, 1, 0, 2162756, 1, 1, 2228292, 1, 2, 2293828, 1, 3, 2097221, 65537, 0, 2162757, 65537, 1, 2228293, 65537, 2, 2293829, 65537, 3, 2097222, 131073, 0, 2162758, 131073, 1, 2228294, 131073, 2, 2293830, 131073, 3, 2097223, 196609, 0, 2162759, 196609, 1, 2228295, 196609, 2, 2293831, 196609, 3, 2097152, 1, 0, 2162688, 1, 1, 2228224, 1, 2, 2293760, 1, 3, 2097153, 65537, 0, 2162689, 65537, 1, 2228225, 65537, 2, 2293761, 65537, 3, 2097154, 131073, 0, 2162690, 131073, 1, 2228226, 131073, 2, 2293762, 131073, 3, 2097155, 196609, 0, 2162691, 196609, 1, 2228227, 196609, 2, 2293763, 196609, 3, 1835008, 1, 0, 1900544, 1, 1, 1966080, 1, 2, 2031616, 1, 3, 1835009, 65537, 0, 1900545, 65537, 1, 1966081, 65537, 2, 2031617, 65537, 3, 1835010, 131073, 0, 1900546, 131073, 1, 1966082, 131073, 2, 2031618, 131073, 3, 1835011, 196609, 0, 1900547, 196609, 1, 1966083, 196609, 2, 2031619, 196609, 3, 1572864, 1, 0, 1638400, 1, 1, 1703936, 1, 2, 1769472, 1, 3, 1572865, 65537, 0, 1638401, 65537, 1, 1703937, 65537, 2, 1769473, 65537, 3, 1572866, 131073, 0, 1638402, 131073, 1, 1703938, 131073, 2, 1769474, 131073, 3, 1572867, 196609, 0, 1638403, 196609, 1, 1703939, 196609, 2, 1769475, 196609, 3, 1310720, 1, 0, 1376256, 1, 1, 1441792, 1, 2, 1507328, 1, 3, 1310721, 65537, 0, 1376257, 65537, 1, 1441793, 65537, 2, 1507329, 65537, 3, 1310722, 131073, 0, 1376258, 131073, 1, 1441794, 131073, 2, 1507330, 131073, 3, 1310723, 196609, 0, 1376259, 196609, 1, 1441795, 196609, 2, 1507331, 196609, 3, 1048576, 1, 0, 1114112, 1, 1, 1179648, 1, 2, 1245184, 1, 3, 1048577, 65537, 0, 1114113, 65537, 1, 1179649, 65537, 2, 1245185, 65537, 3, 1048578, 131073, 0, 1114114, 131073, 1, 1179650, 131073, 2, 1245186, 131073, 3, 1048579, 196609, 0, 1114115, 196609, 1, 1179651, 196609, 2, 1245187, 196609, 3, 786432, 1, 0, 851968, 1, 1, 917504, 1, 2, 983040, 1, 3, 786433, 65537, 0, 851969, 65537, 1, 917505, 65537, 2, 983041, 65537, 3, 786434, 131073, 0, 851970, 131073, 1, 917506, 131073, 2, 983042, 131073, 3, 786435, 196609, 0, 851971, 196609, 1, 917507, 196609, 2, 983043, 196609, 3, 524288, 1, 0, 589824, 1, 1, 655360, 1, 2, 720896, 1, 3, 524289, 65537, 0, 589825, 65537, 1, 655361, 65537, 2, 720897, 65537, 3, 524290, 131073, 0, 589826, 131073, 1, 655362, 131073, 2, 720898, 131073, 3, 524291, 196609, 0, 589827, 196609, 1, 655363, 196609, 2, 720899, 196609, 3, 262144, 1, 0, 327680, 1, 1, 393216, 1, 2, 458752, 1, 3, 262145, 65537, 0, 327681, 65537, 1, 393217, 65537, 2, 458753, 65537, 3, 262146, 131073, 0, 327682, 131073, 1, 393218, 131073, 2, 458754, 131073, 3, 262147, 196609, 0, 327683, 196609, 1, 393219, 196609, 2, 458755, 196609, 3, 262160, 1, 0, 327696, 1, 1, 393232, 1, 2, 458768, 1, 3, 262161, 65537, 0, 327697, 65537, 1, 393233, 65537, 2, 458769, 65537, 3, 262162, 131073, 0, 327698, 131073, 1, 393234, 131073, 2, 458770, 131073, 3, 262163, 196609, 0, 327699, 196609, 1, 393235, 196609, 2, 458771, 196609, 3, 524304, 1, 0, 589840, 1, 1, 655376, 1, 2, 720912, 1, 3, 524305, 65537, 0, 589841, 65537, 1, 655377, 65537, 2, 720913, 65537, 3, 524306, 131073, 0, 589842, 131073, 1, 655378, 131073, 2, 720914, 131073, 3, 524307, 196609, 0, 589843, 196609, 1, 655379, 196609, 2, 720915, 196609, 3, 786448, 1, 0, 851984, 1, 1, 917520, 1, 2, 983056, 1, 3, 786449, 65537, 0, 851985, 65537, 1, 917521, 65537, 2, 983057, 65537, 3, 786450, 131073, 0, 851986, 131073, 1, 917522, 131073, 2, 983058, 131073, 3, 786451, 196609, 0, 851987, 196609, 1, 917523, 196609, 2, 983059, 196609, 3, 1048592, 1, 0, 1114128, 1, 1, 1179664, 1, 2, 1245200, 1, 3, 1048593, 65537, 0, 1114129, 65537, 1, 1179665, 65537, 2, 1245201, 65537, 3, 1048594, 131073, 0, 1114130, 131073, 1, 1179666, 131073, 2, 1245202, 131073, 3, 1048595, 196609, 0, 1114131, 196609, 1, 1179667, 196609, 2, 1245203, 196609, 3, 1310736, 1, 0, 1376272, 1, 1, 1441808, 1, 2, 1507344, 1, 3, 1310737, 65537, 0, 1376273, 65537, 1, 1441809, 65537, 2, 1507345, 65537, 3, 1310738, 131073, 0, 1376274, 131073, 1, 1441810, 131073, 2, 1507346, 131073, 3, 1310739, 196609, 0, 1376275, 196609, 1, 1441811, 196609, 2, 1507347, 196609, 3, 1048640, 1, 0, 1114176, 1, 1, 1179712, 1, 2, 1245248, 1, 3, 1048641, 65537, 0, 1114177, 65537, 1, 1179713, 65537, 2, 1245249, 65537, 3, 1048642, 131073, 0, 1114178, 131073, 1, 1179714, 131073, 2, 1245250, 131073, 3, 1048643, 196609, 0, 1114179, 196609, 1, 1179715, 196609, 2, 1245251, 196609, 3, 1048636, 1, 0, 1114172, 1, 1, 1179708, 1, 2, 1245244, 1, 3, 1048637, 65537, 0, 1114173, 65537, 1, 1179709, 65537, 2, 1245245, 65537, 3, 1048638, 131073, 0, 1114174, 131073, 1, 1179710, 131073, 2, 1245246, 131073, 3, 1048639, 196609, 0, 1114175, 196609, 1, 1179711, 196609, 2, 1245247, 196609, 3, 1048632, 1, 0, 1114168, 1, 1, 1179704, 1, 2, 1245240, 1, 3, 1048633, 65537, 0, 1114169, 65537, 1, 1179705, 65537, 2, 1245241, 65537, 3, 1048634, 131073, 0, 1114170, 131073, 1, 1179706, 131073, 2, 1245242, 131073, 3, 1048635, 196609, 0, 1114171, 196609, 1, 1179707, 196609, 2, 1245243, 196609, 3, 1048628, 1, 0, 1114164, 1, 1, 1179700, 1, 2, 1245236, 1, 3, 1048629, 65537, 0, 1114165, 65537, 1, 1179701, 65537, 2, 1245237, 65537, 3, 1048630, 131073, 0, 1114166, 131073, 1, 1179702, 131073, 2, 1245238, 131073, 3, 1048631, 196609, 0, 1114167, 196609, 1, 1179703, 196609, 2, 1245239, 196609, 3, 1048624, 1, 0, 1114160, 1, 1, 1179696, 1, 2, 1245232, 1, 3, 1048625, 65537, 0, 1114161, 65537, 1, 1179697, 65537, 2, 1245233, 65537, 3, 1048626, 131073, 0, 1114162, 131073, 1, 1179698, 131073, 2, 1245234, 131073, 3, 1048627, 196609, 0, 1114163, 196609, 1, 1179699, 196609, 2, 1245235, 196609, 3, 1048620, 1, 0, 1114156, 1, 1, 1179692, 1, 2, 1245228, 1, 3, 1048621, 65537, 0, 1114157, 65537, 1, 1179693, 65537, 2, 1245229, 65537, 3, 1048622, 131073, 0, 1114158, 131073, 1, 1179694, 131073, 2, 1245230, 131073, 3, 1048623, 196609, 0, 1114159, 196609, 1, 1179695, 196609, 2, 1245231, 196609, 3, 1048616, 1, 0, 1114152, 1, 1, 1179688, 1, 2, 1245224, 1, 3, 1048617, 65537, 0, 1114153, 65537, 1, 1179689, 65537, 2, 1245225, 65537, 3, 1048618, 131073, 0, 1114154, 131073, 1, 1179690, 131073, 2, 1245226, 131073, 3, 1048619, 196609, 0, 1114155, 196609, 1, 1179691, 196609, 2, 1245227, 196609, 3, 1048612, 1, 0, 1114148, 1, 1, 1179684, 1, 2, 1245220, 1, 3, 1048613, 65537, 0, 1114149, 65537, 1, 1179685, 65537, 2, 1245221, 65537, 3, 1048614, 131073, 0, 1114150, 131073, 1, 1179686, 131073, 2, 1245222, 131073, 3, 1048615, 196609, 0, 1114151, 196609, 1, 1179687, 196609, 2, 1245223, 196609, 3, 1048608, 1, 0, 1114144, 1, 1, 1179680, 1, 2, 1245216, 1, 3, 1048609, 65537, 0, 1114145, 65537, 1, 1179681, 65537, 2, 1245217, 65537, 3, 1048610, 131073, 0, 1114146, 131073, 1, 1179682, 131073, 2, 1245218, 131073, 3, 1048611, 196609, 0, 1114147, 196609, 1, 1179683, 196609, 2, 1245219, 196609, 3, 2097156, 1, 0, 2162692, 1, 1, 2228228, 1, 2, 2293764, 1, 3, 2097157, 65537, 0, 2162693, 65537, 1, 2228229, 65537, 2, 2293765, 65537, 3, 2097158, 131073, 0, 2162694, 131073, 1, 2228230, 131073, 2, 2293766, 131073, 3, 2097159, 196609, 0, 2162695, 196609, 1, 2228231, 196609, 2, 2293767, 196609, 3, 2097160, 1, 0, 2162696, 1, 1, 2228232, 1, 2, 2293768, 1, 3, 2097161, 65537, 0, 2162697, 65537, 1, 2228233, 65537, 2, 2293769, 65537, 3, 2097162, 131073, 0, 2162698, 131073, 1, 2228234, 131073, 2, 2293770, 131073, 3, 2097163, 196609, 0, 2162699, 196609, 1, 2228235, 196609, 2, 2293771, 196609, 3, 2097164, 1, 0, 2162700, 1, 1, 2228236, 1, 2, 2293772, 1, 3, 2097165, 65537, 0, 2162701, 65537, 1, 2228237, 65537, 2, 2293773, 65537, 3, 2097166, 131073, 0, 2162702, 131073, 1, 2228238, 131073, 2, 2293774, 131073, 3, 2097167, 196609, 0, 2162703, 196609, 1, 2228239, 196609, 2, 2293775, 196609, 3, 2097168, 1, 0, 2162704, 1, 1, 2228240, 1, 2, 2293776, 1, 3, 2097169, 65537, 0, 2162705, 65537, 1, 2228241, 65537, 2, 2293777, 65537, 3, 2097170, 131073, 0, 2162706, 131073, 1, 2228242, 131073, 2, 2293778, 131073, 3, 2097171, 196609, 0, 2162707, 196609, 1, 2228243, 196609, 2, 2293779, 196609, 3, 2097172, 1, 0, 2162708, 1, 1, 2228244, 1, 2, 2293780, 1, 3, 2097173, 65537, 0, 2162709, 65537, 1, 2228245, 65537, 2, 2293781, 65537, 3, 2097174, 131073, 0, 2162710, 131073, 1, 2228246, 131073, 2, 2293782, 131073, 3, 2097175, 196609, 0, 2162711, 196609, 1, 2228247, 196609, 2, 2293783, 196609, 3, 2097176, 1, 0, 2162712, 1, 1, 2228248, 1, 2, 2293784, 1, 3, 2097177, 65537, 0, 2162713, 65537, 1, 2228249, 65537, 2, 2293785, 65537, 3, 2097178, 131073, 0, 2162714, 131073, 1, 2228250, 131073, 2, 2293786, 131073, 3, 2097179, 196609, 0, 2162715, 196609, 1, 2228251, 196609, 2, 2293787, 196609, 3, 2097180, 1, 0, 2162716, 1, 1, 2228252, 1, 2, 2293788, 1, 3, 2097181, 65537, 0, 2162717, 65537, 1, 2228253, 65537, 2, 2293789, 65537, 3, 2097182, 131073, 0, 2162718, 131073, 1, 2228254, 131073, 2, 2293790, 131073, 3, 2097183, 196609, 0, 2162719, 196609, 1, 2228255, 196609, 2, 2293791, 196609, 3, 2097184, 1, 0, 2162720, 1, 1, 2228256, 1, 2, 2293792, 1, 3, 2097185, 65537, 0, 2162721, 65537, 1, 2228257, 65537, 2, 2293793, 65537, 3, 2097186, 131073, 0, 2162722, 131073, 1, 2228258, 131073, 2, 2293794, 131073, 3, 2097187, 196609, 0, 2162723, 196609, 1, 2228259, 196609, 2, 2293795, 196609, 3, 2097188, 1, 0, 2162724, 1, 1, 2228260, 1, 2, 2293796, 1, 3, 2097189, 65537, 0, 2162725, 65537, 1, 2228261, 65537, 2, 2293797, 65537, 3, 2097190, 131073, 0, 2162726, 131073, 1, 2228262, 131073, 2, 2293798, 131073, 3, 2097191, 196609, 0, 2162727, 196609, 1, 2228263, 196609, 2, 2293799, 196609, 3, 2097192, 1, 0, 2162728, 1, 1, 2228264, 1, 2, 2293800, 1, 3, 2097193, 65537, 0, 2162729, 65537, 1, 2228265, 65537, 2, 2293801, 65537, 3, 2097194, 131073, 0, 2162730, 131073, 1, 2228266, 131073, 2, 2293802, 131073, 3, 2097195, 196609, 0, 2162731, 196609, 1, 2228267, 196609, 2, 2293803, 196609, 3, 2097196, 1, 0, 2162732, 1, 1, 2228268, 1, 2, 2293804, 1, 3, 2097197, 65537, 0, 2162733, 65537, 1, 2228269, 65537, 2, 2293805, 65537, 3, 2097198, 131073, 0, 2162734, 131073, 1, 2228270, 131073, 2, 2293806, 131073, 3, 2097199, 196609, 0, 2162735, 196609, 1, 2228271, 196609, 2, 2293807, 196609, 3, 2097200, 1, 0, 2162736, 1, 1, 2228272, 1, 2, 2293808, 1, 3, 2097201, 65537, 0, 2162737, 65537, 1, 2228273, 65537, 2, 2293809, 65537, 3, 2097202, 131073, 0, 2162738, 131073, 1, 2228274, 131073, 2, 2293810, 131073, 3, 2097203, 196609, 0, 2162739, 196609, 1, 2228275, 196609, 2, 2293811, 196609, 3, 2097204, 1, 0, 2162740, 1, 1, 2228276, 1, 2, 2293812, 1, 3, 2097205, 65537, 0, 2162741, 65537, 1, 2228277, 65537, 2, 2293813, 65537, 3, 2097206, 131073, 0, 2162742, 131073, 1, 2228278, 131073, 2, 2293814, 131073, 3, 2097207, 196609, 0, 2162743, 196609, 1, 2228279, 196609, 2, 2293815, 196609, 3, 2097208, 1, 0, 2162744, 1, 1, 2228280, 1, 2, 2293816, 1, 3, 2097209, 65537, 0, 2162745, 65537, 1, 2228281, 65537, 2, 2293817, 65537, 3, 2097210, 131073, 0, 2162746, 131073, 1, 2228282, 131073, 2, 2293818, 131073, 3, 2097211, 196609, 0, 2162747, 196609, 1, 2228283, 196609, 2, 2293819, 196609, 3, 2097212, 1, 0, 2162748, 1, 1, 2228284, 1, 2, 2293820, 1, 3, 2097213, 65537, 0, 2162749, 65537, 1, 2228285, 65537, 2, 2293821, 65537, 3, 2097214, 131073, 0, 2162750, 131073, 1, 2228286, 131073, 2, 2293822, 131073, 3, 2097215, 196609, 0, 2162751, 196609, 1, 2228287, 196609, 2, 2293823, 196609, 3, 2097216, 1, 0, 2162752, 1, 1, 2228288, 1, 2, 2293824, 1, 3, 2097217, 65537, 0, 2162753, 65537, 1, 2228289, 65537, 2, 2293825, 65537, 3, 2097218, 131073, 0, 2162754, 131073, 1, 2228290, 131073, 2, 2293826, 131073, 3, 2097219, 196609, 0, 2162755, 196609, 1, 2228291, 196609, 2, 2293827, 196609, 3)

[node name="Target" type="Sprite2D" parent="."]
position = Vector2(1024, 192)
texture = ExtResource("4_mt42b")
centered = false

[node name="Target2" type="Sprite2D" parent="."]
position = Vector2(1024, 64)
texture = ExtResource("4_mt42b")
centered = false

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(64, 64)
script = ExtResource("3_3coxh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
sprite_frames = SubResource("SpriteFrames_tff2f")
animation = &"right"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_8d84r")

[node name="Crate" type="CharacterBody2D" parent="."]
position = Vector2(128, 192)
script = ExtResource("20_lbatr")

[node name="Sprite2D" type="Sprite2D" parent="Crate"]
texture = ExtResource("21_2i6sk")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_wcd78")

[node name="Crate2" type="CharacterBody2D" parent="."]
position = Vector2(128, 320)
script = ExtResource("20_lbatr")

[node name="Sprite2D" type="Sprite2D" parent="Crate2"]
texture = ExtResource("21_2i6sk")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate2"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_wcd78")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_top = 589.0
offset_right = 1153.0
offset_bottom = 644.0
bbcode_enabled = true
text = "[center][font_size=36][color=red]Press [color=magenta]\"R\"[/color] to restart, [color=magenta]\"Q\"[/color] or [color=magenta]\"Escape\"[/color] to quit"

[node name="YouWinText" type="RichTextLabel" parent="."]
visible = false
offset_left = -10.0
offset_top = 171.0
offset_right = 1139.0
offset_bottom = 441.0
bbcode_enabled = true
text = "[center][font_size=184][color=orange][b][i]YOU WIN!!!"
